--- a/succesfulcontact.html
+++ b/succesfulcontact.html
@@ -31,6 +31,49 @@
     </div>
 </header>
 
+<!--Succesful Contact Form Hero Image-->
+<div class="hero-image5">
+    <div class="hero-text5">
+        <h3>Thank You For Contacting Us.</h3>
+        <h4>One Of Our Staff Members Will Get Back To You Within 30 Mintues</h4>
+        <p>In The Meantime You Can Browse Our Website And See What We Got To Offer You</p>
+    </div>
+</div>
+
+<!-- Buttons In Body With Flex Wrap -->
+<div class="flex-container wrap">
+    <div class="action">
+        <a href="action.html">Action Movies</a>
+    </div>
+    <div class="animated">
+        <a href="animated.html">Animated Movies</a>
+    </div>
+    <div class="comedy">
+        <a href="comedy.html">Comedy Movies</a>
+    </div>
+    <div class="Docu">
+        <a href="documentary.html">Documentary Movies</a>
+    </div>
+    <div class="fantasy">
+        <a href="fantasy.html">Fantasy Movies</a>
+    </div>
+    <div class="horror">
+        <a href="horror.html">Horror Movies</a>
+    </div>
+    <div class="noir">
+        <a href="noir.html">NOIR Movies</a>
+    </div>
+    <div class="scifi">
+        <a href="scifi.html">Sci-Fi Movies</a>
+    </div>
+    <div class="thriller">
+        <a href="thriller.html">Thriller Movies</a>
+    </div>
+    <div class="truecrime">
+        <a href="truecrime.html">True Crime Movies</a>
+    </div>
+</div>
+
  <!--Footer Code-->
 <footer>
     <div class="footer"></div>
