--- a/cart.html
+++ b/cart.html
@@ -31,6 +31,86 @@
     </div>
 </header>
 
+<div class="flex-container-shopping around">
+    <div class="cartform">
+        <form action="successcart.html" class="checkoutform">
+            <div class="textcart">
+                <h2>To Complete Your Purchase Please Fill All The Nesccary Infomration</h2>
+            </div>
+            <ul>
+                <li>
+                    <label for="first-name">Enter Your First Name</label>
+                    <input type="text" id="cartfirstname" name="first-name">
+                </li>
+                <br>
+                <li>
+                    <label for="last-name">Enter Your Surname</label>
+                    <input type="text" id="cartlastname" name="last-name">
+                </li>
+                <br>
+                <li>
+                    <label for="address">Enter Your Address</label>
+                    <input type="text" id="adress" name="customeraddress">
+                </li>
+                <br>
+                <li>
+                    <label for="postcalcode">Enter Your Postal Code</label>
+                    <input type="text" id="postcalcode" name="customercode">
+                </li>
+                <br>
+                <li>
+                    <label for="mail">Enter Your Email</label>
+                    <input type="text" id="emailcart" name="email">
+                </li>
+                <br>
+                <li>
+                    <label for="cardnumber">Enter Your Card Number</label>
+                    <input type="cardnumber" id="card" name="card">
+                </li>
+                <br>
+                <li>
+                    <label for="exp">Exp Date</label>
+                    <input type="text" id="exp" name="exp">
+                </li>
+                <br>
+                <li>
+                    <label for="cvc">CVC</label>
+                    <input type="text" id="cvc" name="cvc">
+                </li>
+                <br>
+                <li class="formbutton">
+                    <a href="successcart.html" type="submit">Submit</a>
+                </li>
+            </ul>
+        </form>
+    </div>
+    <div class="hero-image6">
+        <div class="hero-text6">
+            <h1>Your Shopping Cart</h1>
+            <ul>
+                <li>
+                    <p>Wolf Of Wall Street: <b>$16.99</b></p>
+                </li>
+                <li>
+                    <p>Joker: <b>$7.99</b></p>
+                </li>
+                <li>
+                    <p>Terrifier 2: <b>$19.99</b></p>
+                </li>
+                <li>
+                    <p>Oppenheimer: <b>$29.99</b></p>
+                </li>
+                <li>
+                    <p>The Pale Blue Eyes: <b>$17.99</b></p>
+                </li>
+                <li>
+                    <h2>Total Sum To Pay: $92.95</h2>
+                </li>
+            </ul>
+        </div>
+    </div>
+</div>
+
 <!--Footer Code-->
 <footer>
     <div class="footer"></div>
