--- a/contact.html
+++ b/contact.html
@@ -36,7 +36,7 @@
 <h3>Our Customer Support Is Open 24/7</h3>
 
 <!--Contact Form-->
-<form action="succesfulcontact.html">
+<form action="succesfulcontact.html" class="contactform">
     <ul>
         <li>
             <label for="name">Enter Your Name</label>
