--- a/successcart.html
+++ b/successcart.html
@@ -4,8 +4,9 @@
 <head>
     <link type="text/css" rel="stylesheet" href="./cssfiles/stylesheet.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home Page</title>
+    <meta name="Succesful Purchases" content="width=device-width, initial-scale=1.0">
+    <meta author="Ameila Bujar">
+    <title>Succesful Purchase</title>
 </head>
 
 <body>
