--- a/become.html
+++ b/become.html
@@ -4,7 +4,8 @@
 <head>
     <link type="text/css" rel="stylesheet" href="./cssfiles/stylesheet.css">
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="Become A Member Page" content="width=device-width, initial-scale=1.0">
+    <meta author="Ameila Bujar">
     <title>Become A Member Page</title>
 </head>
 
