--- a/become.html
+++ b/become.html
@@ -35,7 +35,7 @@
 <!--Main Content Of The Page-->
 <div class="hero-image3">
     <div class="hero-text3">
-        <h3>Benefits Of Becoming A Member</h3>
+        <p><b>BENEFITS OF BECOMING A MEMBER</b>></p>
         <ul>
             <li>25% Discount Of Your Every Purhase</li>
             <li>25% Cinema Discount</li>
