--- a/successbecome.html
+++ b/successbecome.html
@@ -35,8 +35,8 @@
 <!--Hero With Successful Becoming A Member-->
 <div class="hero-image4">
     <div class="hero-text4">
-        <h2>You Are Now A Square Eyes Member</h2>
-        <h3>You Will Soon Recive An Email With A Password And More Information</h3>
+      <p><b>You Are Now A Square Eyes Member</b></p>
+        <p>You Will Soon Recive An Email With A Password And More Information</p>
         <p>Your Membership Number Is: <br><b>873 3920 213</b></p>
     </div>
 </div>
