--- a/succesfulcontact.html
+++ b/succesfulcontact.html
@@ -35,8 +35,8 @@
 <!--Succesful Contact Form Hero Image-->
 <div class="hero-image5">
     <div class="hero-text5">
-        <h3>Thank You For Contacting Us.</h3>
-        <h4>One Of Our Staff Members Will Get Back To You Within 30 Mintues</h4>
+      <p><b>Thank You For Contacting Us.</b></p>
+        <p>One Of Our Staff Members Will Get Back To You Within 30 Mintues</p>
         <p>In The Meantime You Can Browse Our Website And See What We Got To Offer You</p>
     </div>
 </div>
@@ -81,5 +81,4 @@
 </footer>
     
 </body>
-    
 </html>
