--- a/successcart.html
+++ b/successcart.html
@@ -35,10 +35,10 @@
 <!--Main Content-->
 <div class="hero-image7">
     <div class="hero-text7">
-        <h1>Your Purchase Was Succesful</h1>
-        <h2>Your Order Number Is: <br> #9320192734892</h2>
-        <h3>You Will Soon Recive A E-mail Containg More Information About Your Order And How You Can Track It</h3>
-        <h4>If You Have Any Questions Feel Free To Contact Us At Anytime</h4>
+      <p><b>Your Purchase Was Succesful</b></p>
+      <p>Your Order Number Is: <br><b>#9320192734892</b></p>
+        <p>You Will Soon Recive A E-mail Containg More Information About Your Order And How You Can Track It</p>
+        <p>If You Have Any Questions Feel Free To Contact Us At Anytime</p>
     </div>
 </div>
 
