--- a/cart.html
+++ b/cart.html
@@ -87,7 +87,7 @@
     </div>
     <div class="hero-image6">
         <div class="hero-text6">
-            <h1>Your Shopping Cart</h1>
+            <p><b>Your Shopping Cart</b></p>
             <ul>
                 <li>
                     <p>Wolf Of Wall Street: <b>$16.99</b></p>
