--- a/cart.html
+++ b/cart.html
@@ -36,7 +36,7 @@
     <div class="cartform">
         <form action="successcart.html" class="checkoutform">
             <div class="textcart">
-                <h2>To Complete Your Purchase Please Fill All The Nesccary Infomration</h2>
+              <p><b>To Complete Your Purchase Please Fill All The Nesccary Infomration</b></p>
             </div>
             <ul>
                 <li>
@@ -105,7 +105,7 @@
                     <p>The Pale Blue Eyes: <b>$17.99</b></p>
                 </li>
                 <li>
-                    <h2>Total Sum To Pay: $92.95</h2>
+                  <p><b>Total Sum To Pay: $92.95</b></p>
                 </li>
             </ul>
         </div>
